name:                pos
version:             0.1.0.0
synopsis:            Proof-of-stake
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Artyom Kazak, Ivan Gromakovskii
maintainer:          hi@serokell.io
copyright:           2016 Serokell
category:            Currency
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:      Pos.Crypto
                        Pos.Communication
                        Pos.Constants
                        Pos.FollowTheSatoshi
                        Pos.Launcher
                        Pos.Slotting
                        Pos.State
                        Pos.Types
  other-modules:        Pos.Communication.Methods
                        Pos.Communication.Types
                        Pos.Crypto.Hashing
                        Pos.Crypto.Random
                        Pos.Crypto.SecretSharing
                        Pos.Crypto.Signing
                        Pos.Merkle
                        Pos.State.Acidic
                        Pos.State.Memory
                        Pos.State.State
                        Pos.State.Storage
                        Pos.Types.Block
                        Pos.Types.FtsSeed
                        Pos.Types.Types
                        Pos.Types.Utxo
                        Pos.WorkMode
                        Pos.Util
                        Pos.Util.NotImplemented
  build-depends:        HsOpenSSL
                      , QuickCheck
                      , acid-state
                      , base
                      , binary
                      , binary-orphans
                      , bytestring
                      , cereal
                      , containers
                      , cryptonite >= 0.19 && < 0.21
                      , data-default
                      , ed25519
                      , exceptions
                      , formatting
                      , hashable
                      , lens
                      , memory
                      , mtl
                      , quickcheck-instances
                      , random
                      , safecopy
                      , serokell-core
                      , template-haskell
                      , text
                      , text-format
                      , time
                      , time-warp
                      , universum
                      , unordered-containers
                      , vector
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:   RecordWildCards
                      , OverloadedStrings
                      , DeriveDataTypeable
                      , NoImplicitPrelude
                      , GeneralizedNewtypeDeriving

executable pos-node
  hs-source-dirs:      src/node
  main-is:             Main.hs
  build-depends:       base
                     , formatting
                     , pos
                     , time-warp
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , NoImplicitPrelude
                     , GeneralizedNewtypeDeriving

test-suite pos-test
  main-is:             Test.hs
  other-modules:       Spec
                     , Test.Pos.CryptoSpec
                     , Test.Pos.FollowTheSatoshiSpec
                     , Test.Pos.SlottingSpec
                     , Test.Pos.Types.BlockSpec
                     , Test.Pos.Types.UtxoSpec
                     , Test.Pos.Util
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , binary
                     , bytestring
                     , formatting
                     , hspec
                     , pos
                     , random
                     , serokell-core
                     , time-units
                     , time-warp
                     , universum
                     , unordered-containers
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall
                       -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
                     , NoImplicitPrelude
