name:                pos
version:             0.1.0.0
synopsis:            Proof-of-stake
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Artyom Kazak, Ivan Gromakovskii
maintainer:          hi@serokell.io
copyright:           2016 Serokell
category:            Currency
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:      Pos.Crypto
                        Pos.Communication
                        Pos.Constants
                        Pos.DHT
                        Pos.DHT.Real
                        Pos.FollowTheSatoshi
                        Pos.Genesis
                        Pos.Launcher
                        Pos.Merkle
                        Pos.Slotting
                        Pos.State
                        Pos.Types
                        Pos.Worker
  other-modules:        Pos.Communication.Methods
                        Pos.Communication.Types
                        Pos.Communication.Types.Block
                        Pos.Communication.Types.Mpc
                        Pos.Communication.Types.Tx
                        Pos.Communication.Server
                        Pos.Communication.Server.Block
                        Pos.Communication.Server.Mpc
                        Pos.Crypto.Hashing
                        Pos.Crypto.Random
                        Pos.Crypto.SecretSharing
                        Pos.Crypto.Signing
                        Pos.State.Acidic
                        Pos.State.State
                        Pos.State.Storage
                        Pos.State.Storage.Block
                        Pos.State.Storage.Mpc
                        Pos.State.Storage.Types
                        Pos.State.Storage.Tx
                        Pos.Types.Block
                        Pos.Types.Mpc
                        Pos.Types.SlotId
                        Pos.Types.Tx
                        Pos.Types.Types
                        Pos.Types.Utxo
                        Pos.Worker.Block
                        Pos.Worker.Mpc
                        Pos.WorkMode
                        Pos.Util
                        Pos.Util.NotImplemented
  build-depends:        HsOpenSSL
                      , QuickCheck
                      , acid-state
                      , async
                      , base
                      , binary
                      , binary-orphans
                      , bytestring
                      , cereal
                      , containers
                      , cryptonite >= 0.19 && < 0.21
                      , data-default
                      , data-msgpack
                      , ed25519
                      , exceptions
                      , formatting
                      , hashable
                      , lens
                      , kademlia
                      , memory
                      , mtl
                      , pvss
                      , quickcheck-instances
                      , random
                      , safecopy
                      , serokell-core
                      , template-haskell
                      , text
                      , text-format
                      , time
                      , time-warp
                      , transformers
                      , universum
                      , unordered-containers
                      , vector
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:   RecordWildCards
                      , OverloadedStrings
                      , DeriveDataTypeable
                      , NoImplicitPrelude
                      , GeneralizedNewtypeDeriving

executable pos-node
  hs-source-dirs:      src/node
  main-is:             Main.hs
  build-depends:       base
                     , formatting
                     , pos
                     , time-warp
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , NoImplicitPrelude
                     , GeneralizedNewtypeDeriving

executable pos-demo
  hs-source-dirs:      src/demo
  main-is:             Main.hs
  build-depends:       async
                     , base
                     , formatting
                     , pos
                     , time-warp
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , NoImplicitPrelude
                     , GeneralizedNewtypeDeriving

test-suite pos-test
  main-is:             Test.hs
  other-modules:       Spec
                     , Test.Pos.CryptoSpec
                     , Test.Pos.FollowTheSatoshiSpec
                     , Test.Pos.MerkleSpec
                     , Test.Pos.SlottingSpec
                     , Test.Pos.Types.BlockSpec
                     , Test.Pos.Types.SlotIdSpec
                     , Test.Pos.Types.UtxoSpec
                     , Test.Pos.Util
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , binary
                     , bytestring
                     , formatting
                     , hspec
                     , pos
                     , random
                     , serokell-core
                     , time-units
                     , time-warp
                     , universum
                     , unordered-containers
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall
                       -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
                     , NoImplicitPrelude
