name:                pos
version:             0.1.0.0
synopsis:            Proof-of-stake
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Artyom Kazak, Ivan Gromakovskii
maintainer:          hi@serokell.io
copyright:           2016 Serokell
category:            Currency
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:      Pos.CLI
                        Pos.Crypto
                        Pos.Communication
                        Pos.Constants
                        Pos.DHT
                        Pos.DHT.Real
                        Pos.FollowTheSatoshi
                        Pos.Genesis
                        Pos.Launcher
                        Pos.Merkle
                        Pos.Slotting
                        Pos.State
                        Pos.Types
                        Pos.Util
                        Pos.Worker
  other-modules:        Pos.Communication.Methods
                        Pos.Communication.Types
                        Pos.Communication.Types.Block
                        Pos.Communication.Types.Mpc
                        Pos.Communication.Types.SysStart
                        Pos.Communication.Types.Tx
                        Pos.Communication.Server
                        Pos.Communication.Server.Block
                        Pos.Communication.Server.Mpc
                        Pos.Communication.Server.SysStart
                        Pos.Communication.Server.Tx
                        Pos.Crypto.Arbitrary
                        Pos.Crypto.Arbitrary.Hash
                        Pos.Crypto.Arbitrary.Unsafe
                        Pos.Crypto.Hashing
                        Pos.Crypto.Random
                        Pos.Crypto.SecretSharing
                        Pos.Crypto.Signing
                        Pos.State.Acidic
                        Pos.State.State
                        Pos.State.Storage
                        Pos.State.Storage.Block
                        Pos.State.Storage.Mpc
                        Pos.State.Storage.Stats
                        Pos.State.Storage.Types
                        Pos.State.Storage.Tx
                        Pos.Types.Arbitrary
                        Pos.Types.Arbitrary.Unsafe
                        Pos.Types.Block
                        Pos.Types.Mpc
                        Pos.Types.Slotting
                        Pos.Types.Timestamp
                        Pos.Types.Tx
                        Pos.Types.Types
                        Pos.Types.Utxo
                        Pos.Worker.Block
                        Pos.Worker.Mpc
                        Pos.Worker.Tx
                        Pos.WorkMode
                        Pos.Util.Arbitrary
                        Pos.Util.NotImplemented
  build-depends:        HsOpenSSL
                      , QuickCheck
                      , acid-state
                      , async
                      , base
                      , binary
                      , binary-orphans
                      , bytestring
                      , cereal
                      , containers
                      , cryptonite >= 0.19 && < 0.21
                      , data-default
                      , data-msgpack >= 0.0.8
                      , derive
                      , ed25519
                      , exceptions
                      , formatting
                      , hashable
                      , lens
                      , lrucache
                      , kademlia
                      , memory
                      , mtl
                      , parsec
                      , pvss
                      , quickcheck-instances
                      , random
                      , safecopy
                      , serokell-core
                      , stm
                      , stm-containers
                      , template-haskell
                      , text
                      , text-format
                      , time
                      , time-warp
                      , transformers
                      , universum
                      , unordered-containers
                      , vector
                      , list-t == 1
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:   RecordWildCards
                      , OverloadedStrings
                      , DeriveDataTypeable
                      , NoImplicitPrelude
                      , GeneralizedNewtypeDeriving

executable pos-node
  hs-source-dirs:      src/node
  main-is:             Main.hs
  build-depends:       base
                     , data-default
                     , binary
                     , bytestring
                     , directory
                     , filepath
                     , formatting
                     , optparse-simple
                     , parsec
                     , pos
                     , serokell-core
                     , time-warp
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , NoImplicitPrelude
                     , GeneralizedNewtypeDeriving

executable pos-wallet
  hs-source-dirs:      src/wallet
  main-is:             Main.hs
  build-depends:       base
                     , data-default
                     , formatting
                     , optparse-applicative
                     , parsec
                     , pos
                     , serokell-core
                     , time-warp
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , NoImplicitPrelude
                     , GeneralizedNewtypeDeriving

executable pos-demo
  hs-source-dirs:      src/demo
  main-is:             Main.hs
  build-depends:       async
                     , base
                     , data-default
                     , formatting
                     , pos
                     , serokell-core
                     , time-warp
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , NoImplicitPrelude
                     , GeneralizedNewtypeDeriving

test-suite pos-test
  main-is:             Test.hs
  other-modules:       Spec
                     , Test.Pos.CryptoSpec
                     , Test.Pos.FollowTheSatoshiSpec
                     , Test.Pos.MerkleSpec
                     , Test.Pos.SlottingSpec
                     , Test.Pos.Types.BinarySpec
                     , Test.Pos.Types.BlockSpec
                     , Test.Pos.Types.SlotIdSpec
                     , Test.Pos.Types.UtxoSpec
                     , Test.Pos.Util
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , binary
                     , bytestring
                     , cryptonite
                     , formatting
                     , hspec
                     , memory
                     , pos
                     , random
                     , serokell-core
                     , time-units
                     , time-warp
                     , universum
                     , unordered-containers
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall
                       -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
                     , NoImplicitPrelude

benchmark pos-bench-criterion
  hs-source-dirs:      bench
  main-is:             Local/Criterion.hs
  other-modules:       Bench.Pos.Criterion.FollowTheSatoshiBench
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , binary
                     , bytestring
                     , containers
                     , criterion
                     , formatting
                     , pos
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
                     , NoImplicitPrelude

benchmark pos-bench-remote
  hs-source-dirs:      bench
  main-is:             Remote/Distributed.hs
  other-modules:       Bench.Pos.Remote.Config
  type:                exitcode-stdio-1.0
  build-depends:       aeson
                     , base
                     , binary
                     , bytestring
                     , containers
                     , data-default
                     , formatting
                     , optparse-applicative
                     , parsec
                     , pos
                     , serokell-core
                     , time-warp
                     , universum
                     , yaml
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -fno-warn-orphans
                       -O2
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
                     , NoImplicitPrelude
