Name:                acid-state-exts
Version:             0.14.2
Synopsis:            Add ACID guarantees to any serializable Haskell data structure.
Description:         Use regular Haskell data structures as your database and get stronger ACID guarantees than most RDBMS offer.
Homepage:            https://github.com/acid-state/acid-state
License:             PublicDomain
Author:              David Himmelstrup
Maintainer:          Lemmih <lemmih@gmail.com>
-- Copyright:
Category:            Database
Build-type:          Simple
Cabal-version:       >=1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
Extra-source-files:

Source-repository head
  type:          git
  location:      https://github.com/acid-state/acid-state

Library
  Exposed-Modules:
                       Serokell.AcidState.ExtendedState
                       Serokell.AcidState.Instances
                       Serokell.AcidState.Util

  Build-depends:       array,
                       acid-state,
                       base >= 4 && < 5,
                       bytestring >= 0.10.2,
                       cereal >= 0.4.1.0,
                       containers,
                       directory,
                       filelock,
                       filepath,
                       exceptions,
                       extensible-exceptions,
                       extra,
                       hashable,
                       mtl,
                       network,
                       safecopy >= 0.9.4,
                       stm >= 2.4,
                       template-haskell,
                       th-expand-syns >= 0.4.1 && < 0.5,
                       time-units,
                       unordered-containers

  if os(windows)
     Build-depends:       Win32
  else
     Build-depends:       unix

  Hs-Source-Dirs:      src/

  default-language:    Haskell2010
  GHC-Options:         -fwarn-unused-imports -fwarn-unused-binds
