name:                cardano-sl-auxx
version:             0.6.0
synopsis:            Cardano SL - Auxx
description:         Cardano SL - Auxx
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

executable cardano-auxx
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
                       Command
                       Command.Parser
                       Command.Rollback
                       Command.Run
                       Command.Tx
                       Command.Types
                       Command.Update
                       Mode
                       Plugin
                       AuxxOptions

                       -- TODO: delete these
                       Pos.Auxx
                       Pos.Auxx.Hacks

  build-depends:
                       QuickCheck
                     , acid-state
                     , aeson
                     , ansi-wl-pprint
                     , base
                     , base58-bytestring
                     , binary
                     , bytestring
                     , cardano-sl
                     , cardano-sl-core
                     , cardano-sl-db
                     , cardano-sl-godtossing
                     , cardano-sl-infra
                     , cardano-sl-ssc
                     , cardano-sl-txp
                     , cardano-sl-update
                     , data-default
                     , dlist
                     , ether
                     , exceptions
                     , containers
                     , formatting
                     , lens
                     , log-warper
                     , mmorph
                     , monad-control
                     , monad-loops
                     , mtl
                     , neat-interpolation
                     , network-transport-tcp
                     , node-sketch
                     , optparse-applicative
                     , parsec
                     , random
                     , resourcet
                     , safecopy
                     , safe-exceptions
                     , serokell-util >= 0.1.3.4
                     , stm
                     , stm-containers
                     , tagged
                     , text
                     , time
                     , time-units
                     , transformers
                     , transformers-base
                     , transformers-lift
                     , universum >= 0.1.11
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if !os(windows)
    build-depends:     unix
