name:                cardano-sl-binary
version:             1.1.1
synopsis:            Cardano SL - binary serialization
description:         This package defines a type class for binary serialization,
                     helpers and instances.
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
                       Pos.Binary.Class

                       Test.Pos.Cbor.Canonicity
                       Test.Pos.Cbor.RefImpl

  other-modules:
                       Pos.Binary.Class.Core
                       Pos.Binary.Class.Primitive
                       Pos.Binary.Class.TH

  build-depends:       QuickCheck
                     , base
                     , binary
                     , bytestring
                     , cborg
                     , containers
                     , digest
                     , formatting
                     , half
                     , hashable
                     , lens
                     , mtl
                     , safe-exceptions
                     , serokell-util
                     , tagged
                     , template-haskell
                     , text
                     , th-utilities
                     , time-units
                     , transformers
                     , universum
                     , unordered-containers
                     , vector

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
